# atf-to-english

./: .gitignore  LICENSE  README.md  REPRODUCTION.md  download_pairs.py  infer.py  pyproject.toml  requirements.txt  train.py
data/: key_test_cases.json
old_tests/: baseline_results.json  compare_v12_models.py  cuneiform_translators_results.json  v12_comparison_log.txt  v12_comparison_results.json  v12_vs_ct_comparison.md  v12a_achievement_summary.md  v12a_optimal_epochs_manual_testing.md  v12a_optimal_epochs_test_log.txt
scripts/: run_on_ngc.sh
