[project]
name = "atf-to-english"
version = "0.1.0"
description = "Minimal, reproducible ATF (Akkadian Transliteration Format) to English translation with T5-small — stable quick recipe + high-quality long-training tag-free approach"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.46",
    "datasets",
    "accelerate>=0.30",
    "sentencepiece>=0.1.99",
    "requests>=2.28",
    "tqdm>=4.66",
]

[tool.uv]
# For CUDA x86: uncomment if needed
# extra-index-url = ["https://download.pytorch.org/whl/cu124"]

# On ARM64 (e.g. DGX Spark / Grace-Blackwell), use NVIDIA NGC container instead of PyPI torch.
# See README for the exact docker + pip command that worked for stable training.